# drf-project

./: .env  .env.postgres  .env.test  .gitlab-ci.yaml  .gitlab-ci.yml  README.md  coverage.json  deploy.sh  docker-compose.yaml  docker.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: data.json
payment/: models.py  serializers.py  serviсes.py  urls.py  views.py
payment/management/commands/: expand_db.py  fill_db.py
payment/migrations/: 0001_initial.py  0002_payment_retrieve_id.py  0002_remove_payment_course_remove_payment_lesson_and_more.py  0003_payment_content_type_and_more.py  0004_payment_object_id.py
training_courses/: apps.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
training_courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_video_url_lesson.py  0004_subscription.py  0005_course_price_lesson_price.py  0006_course_last_update_lesson_last_update.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_staff.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
